--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="./build/css/style.css" />
   </head>
   <body>
-    <div style="color:purple;font-size:75px">
-      <svg class="icon icon-gear">
-        <use xlink:href="./icons/symbol-defs.svg#icon-gear"></use>
-      </svg>
-    </div>
-    <script src="./build/js/bundle.js"></script>
+    <script src="./src/js/index.js"></script>
   </body>
 </html>
